--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_home">HomeActivity</string>
 
+
+    <string name="mapbox_api_token">pk.eyJ1IjoiNGszciIsImEiOiJmYzFmMzhlZTk4OGE3N2FiY2Q5YzBmNjUxZTdjZmE1NyJ9.Bi9Nll2UJyjJwcpJNdjn3g</string>
+    <string name="search_mapbox">Search Mapbox</string>
+    <string name="location">Location</string>
+    <string name="map_style">Map Style</string>
+
 </resources>
